merge trunk to 2.0.x
git-svn-id: https://svn.apache.org/repos/asf/shindig/branches/2.0.x@983934 13f79535-47bb-0310-9956-ffa450edef68